--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,9 @@ $bp-smallest: 25em; // 400px */
 #hide2 {
   display: none;
 }
+.password_eye {
+  cursor: pointer;
+}
 @media only screen and (max-width: 800px) {
   .form {
     width: 95%;
